--- a/Todo/Views/MainWindow.xaml
+++ b/Todo/Views/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:views="clr-namespace:Todo.Views"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="300"
+        Width="200" Height="300"
         x:Class="Todo.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Avalonia Todo">
-    <views:TodoListView/>
+        Title="Avalonia Todo"
+        Content="{Binding Content}">
 </Window>
