--- a/Todo/Views/TodoListView.xaml
+++ b/Todo/Views/TodoListView.xaml
@@ -5,10 +5,18 @@
              mc:Ignorable="d" d:DesignWidth="200" d:DesignHeight="400"
              x:Class="Todo.Views.TodoListView">
   <DockPanel>
-    <Button DockPanel.Dock="Bottom">Add an item</Button>
-    <StackPanel>
-      <CheckBox Margin="4">Walk the dog</CheckBox>
-      <CheckBox Margin="4">Buy some milk</CheckBox>
-    </StackPanel>
+    <Button DockPanel.Dock="Bottom"
+            Command="{Binding $parent[Window].DataContext.AddItem}">
+      Add an item
+    </Button>
+    <ItemsControl Items="{Binding Items}">
+      <ItemsControl.ItemTemplate>
+        <DataTemplate>
+          <CheckBox Margin="4"
+                    IsChecked="{Binding IsChecked}"
+                    Content="{Binding Description}"/>
+        </DataTemplate>
+      </ItemsControl.ItemTemplate>
+    </ItemsControl>
   </DockPanel>
 </UserControl>
